# corpuslab

./: .gitignore  README.md  pyproject.toml
src/corpuslab/: __init__.py  __main__.py  cli.py  constants.py  models.py
src/corpuslab/canonical/: engine.py  trace.py  transforms.py
src/corpuslab/export/: csv_export.py  jsonl.py  markdown.py
src/corpuslab/fingerprint/: cluster.py  hasher.py
src/corpuslab/ingest/: detect.py  engine.py  readers.py
src/corpuslab/redaction/: custom.py  engine.py  patterns.py
src/corpuslab/storage/: corpus.py
src/corpuslab/tagging/: base.py  confidence.py  encoding.py  heuristics.py  obfuscation.py  registry.py  structure.py
tests/: conftest.py  test_cli.py  test_models.py  test_storage.py
tests/fixtures/: sample_payloads.csv  sample_payloads.json  sample_payloads.jsonl  sample_payloads.txt
tests/test_canonical/: test_engine.py  test_transforms.py
tests/test_export/: test_csv_export.py  test_jsonl.py  test_markdown.py
tests/test_fingerprint/: test_cluster.py  test_hasher.py
tests/test_ingest/: test_detect.py  test_engine.py  test_readers.py
tests/test_integration/: test_performance.py  test_pipeline.py
tests/test_redaction/: test_engine.py  test_patterns.py
tests/test_tagging/: test_encoding.py  test_heuristics.py  test_obfuscation.py  test_registry.py  test_structure.py
